--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
           <span class="icon bar"></span>
           <span class="icon-bar"></span>
         </button>
+        <!--logo section-->
                 <img src="./images/logo.jpg" alt="sneaker" id="sneakerLogo" class="img-responsive">
                 <a class="navbar-brand" href="#">80's Style Sneaker Shop</a>
             </div>
+            <!--dropdown navigation menu-->
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
@@ -44,6 +46,9 @@
                         <li><a href="#about">About</a></li>
                     </li>
                 </ul>
+                <div class="purchasing-menu">
+                <img src="./images/cart.jpg" alt= "shopping-cart" class="img-responsive">
+              </div>
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
@@ -68,38 +73,64 @@
                 <button type="button" class="btn btn-default"><a href="#Buy Now">Buy Now!</a>
                 </button>
             </section>
+
+          </div>
+
+            <!--carousel middle-section-->
+
+            <section class="listbox">
+              <section id="carousel" class="carousel slide" data-ride="carousel">
+            <h1>This Week's Sales!</h1>
+            <div class="carousel-inner">
+            <div class="item active">
+                <img src="./images/shoe2.png" alt="mens-sneakers" class="center-block img-responsive">
+                <h4> Men's Sneakers</h4>
+                <p>
+                    <a href="#$90.00">$120.00</a>
+                </p>
+              </div>
+              <figure class="item">
+                <img src="./images/shoe3.png" alt = "womens-sneakers" class="center-block img-responsive">
+                <h4>women's Sneakers</h4>
+                <p>
+                    <a href="#$80.00">$80.00</a>
+                </p>
+              </figure>
+              <figure class="item">
+                <img src="./images/shoe4.png" alt="childrens-sneakers" class="center-block img-responsive">
+                <h4>Kid's Sneakers</h4>
+                <p>
+                    <a href="#$60.00">$60.00</a>
+                </p>
+              </figure>
+
+
+              <!--carousel controls-->
+              <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+              </section>
+            </section>
             <section class="shoe-chart col-xs-12 ">
-                <h2>Find Your Shoe Size & Fit</h2>
+                <h3>Find Your Shoe Size & Fit</h3>
                 <button type="button" class="bg-info"><a href="sizechart.html">Size chart</a></button>
+
             </section>
 
-            <h2>Shop Recommended Shoes</h2>
-
-            <div class="bottom-section">
-
-                <img src="./images/shoe2.png">
-                <h4>Funny Sneakers</h4>
-                <p>
-                    <a href="#$120.00">$120.00</a>
-                </p>
-
-
-                <img src="./images/shoe3.png">
-                <h4>Funny Sneakers</h4>
-                <p>
-                    <a href="#$120.00">$120.00</a>
-                </p>
-                <img src="./images/shoe4.png">
-                <h4>Funny Sneakers</h4>
-                <p>
-                    <a href="#$120.00">$120.00</a>
-                </p>
-            </div>
-            <footer>
-                <img src="./images/logo.jpg">
-                <a href="#Shipping|Terms&amp; Conditions">Shipping Terms&amp; Conditions</a>|&copy;Copyright 2017.Sneaker Shop, LLC.
+            <footer class="panel panel-default">
+              <div class="panel-body">
+                <img src="./images/logo.jpg" alt= "footer-logo" class="img-responsive">
+                <a href="#Shipping|Terms&amp; Conditions">Shipping Terms &amp; Conditions</a>&copy;Copyright 2017. Sneaker Shop, LLC.
+              </div>
             </footer>
-        </div>
+
+
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
