--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
             <section class="product-display col-xs-12">
                 <h1>Featured 80's Throwback</h1>
                 <img src="./images/shoe1.png" alt="signature-sneaker" id="black-high-tops" class="img-responsive img-center">
-                <a href="#All Shoes">Back To All Shoes</a>
+                <a href="Back To All Shoes">Back To All Shoes</a>
                 <h3>Black Hightops</h3>
                 <p>Classic style for all ages
                     <a href="#Read The Reviews">Read The Reviews</a>
                 </p>
                 <p>$70.00</p>
-                <button type="button" class="btn btn-default"><a href="#Buy Now">Buy Now!</a>
+                <button type="button" class="btn btn-default"><a href="#Buy Now"><span class="buy-now-link">Buy Now!</span></a>
                 </button>
             </section>
 
@@ -118,15 +118,15 @@
               </section>
             </section>
             <section class="shoe-chart col-xs-12 ">
-                <h3>Find Your Shoe Size & Fit</h3>
+                Find Your Shoe Size & Fit
                 <button type="button" class="bg-info"><a href="sizechart.html">Size chart</a></button>
 
             </section>
 
-            <footer class="panel panel-default">
+            <footer class="panel panel-default col-xs-12">
               <div class="panel-body">
                 <img src="./images/logo.jpg" alt= "footer-logo" class="img-responsive">
-                <a href="#Shipping|Terms&amp; Conditions">Shipping Terms &amp; Conditions</a>&copy;Copyright 2017. Sneaker Shop, LLC.
+                <a href="#Shipping|Terms&amp; Conditions">Shipping Terms &amp; Conditions</a>&copy;Copyright 2017. 80's Style Sneaker Shop, LLC.
               </div>
             </footer>
 
