--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           <span class="icon-bar"></span>
           <span class="icon bar"></span>
           <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
-        <!--logo section-->
+                <!--logo section-->
                 <img src="./images/logo.jpg" alt="sneaker" id="sneakerLogo" class="img-responsive">
                 <a class="navbar-brand" href="#">80's Style Sneaker Shop</a>
             </div>
@@ -46,9 +47,9 @@
                         <li><a href="#about">About</a></li>
                     </li>
                 </ul>
-                <div class="purchasing-menu">
-                <img src="./images/cart.jpg" alt= "shopping-cart" class="img-responsive">
-              </div>
+                <button type="button" class="btn btn default navbar btn navbar-right">
+                <img src="./images/cart.jpg" alt= "shopping-cart" class="img-responsive"></button>
+
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
@@ -72,63 +73,61 @@
                 <p>$70.00</p>
                 <button type="button" class="btn btn-default"><a href="#Buy Now"><span class="buy-now-link">Buy Now!</span></a>
                 </button>
+                <h1>This Week's Sales!</h1>
             </section>
+        </div>
 
-          </div>
+        <!--carousel container-->
 
-            <!--carousel middle-section-->
+        <section id="carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="./images/shoe2.png" alt="mens-sneakers" class="center-block img-responsive">
+                    <h4> Men's Sneakers</h4>
 
-            <section class="listbox">
-              <section id="carousel" class="carousel slide" data-ride="carousel">
-            <h1>This Week's Sales!</h1>
-            <div class="carousel-inner">
-            <div class="item active">
-                <img src="./images/shoe2.png" alt="mens-sneakers" class="center-block img-responsive">
-                <h4> Men's Sneakers</h4>
-                <p>
                     <a href="#$90.00">$120.00</a>
-                </p>
-              </div>
-              <figure class="item">
-                <img src="./images/shoe3.png" alt = "womens-sneakers" class="center-block img-responsive">
-                <h4>women's Sneakers</h4>
-                <p>
-                    <a href="#$80.00">$80.00</a>
-                </p>
-              </figure>
-              <figure class="item">
-                <img src="./images/shoe4.png" alt="childrens-sneakers" class="center-block img-responsive">
-                <h4>Kid's Sneakers</h4>
-                <p>
-                    <a href="#$60.00">$60.00</a>
-                </p>
-              </figure>
+
+                </div>
+                <figure class="item">
+                    <img src="./images/shoe3.png" alt="womens-sneakers" class="center-block img-responsive">
+                    <h4>Women's Sneakers</h4>
+                    <p>
+                        <a href="#$80.00">$80.00</a>
+                    </p>
+                </figure>
+                <figure class="item">
+                    <img src="./images/shoe4.png" alt="childrens-sneakers" class="center-block img-responsive">
+                    <h4>Kid's Sneakers</h4>
+                    <p>
+                        <a href="#$60.00">$60.00</a>
+                    </p>
+                </figure>
 
 
-              <!--carousel controls-->
-              <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+                <!--carousel controls-->
+                <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-              </section>
-            </section>
-            <section class="shoe-chart col-xs-12 ">
-                Find Your Shoe Size & Fit
-                <button type="button" class="bg-info"><a href="sizechart.html">Size chart</a></button>
 
-            </section>
+        </section>
+        <section class="shoe-chart col-xs-12 ">
+            Find Your Shoe Size & Fit
+            <button type="button" class="bg-info"><a href="sizechart.html">Size chart</a></button>
 
-            <footer class="panel panel-default col-xs-12">
-              <div class="panel-body">
-                <img src="./images/logo.jpg" alt= "footer-logo" class="img-responsive">
+        </section>
+
+        <footer class="panel panel-default col-xs-12">
+            <div class="panel-body">
+                <img src="./images/logo.jpg" alt="footer-logo" class="img-responsive">
                 <a href="#Shipping|Terms&amp; Conditions">Shipping Terms &amp; Conditions</a>&copy;Copyright 2017. 80's Style Sneaker Shop, LLC.
-              </div>
-            </footer>
+            </div>
+        </footer>
 
 
     </div>
