footer and sizechart adjustment

--- a/index.html
+++ b/index.html
@@ -78,16 +78,18 @@
         </div>
 
         <!--carousel container-->
-
+<div class="container">
+  <div class="row">
+    <section class="carousel-display col-xs-8">
         <section id="carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
-                <div class="item active">
+                <figure class="item active">
                     <img src="./images/shoe2.png" alt="mens-sneakers" class="center-block img-responsive">
                     <h4> Men's Sneakers</h4>
 
-                    <a href="#$90.00">$120.00</a>
+                    <p><a href="#$90.00">$90.00</a></p>
 
-                </div>
+                </figure>
                 <figure class="item">
                     <img src="./images/shoe3.png" alt="womens-sneakers" class="center-block img-responsive">
                     <h4>Women's Sneakers</h4>
@@ -102,8 +104,7 @@
                         <a href="#$60.00">$60.00</a>
                     </p>
                 </figure>
-
-
+              </div>
                 <!--carousel controls-->
                 <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -113,20 +114,19 @@
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
-            </div>
+              </div>
 
-        </section>
         <section class="shoe-chart col-xs-12 ">
-            Find Your Shoe Size & Fit
-            <button type="button" class="bg-info"><a href="sizechart.html">Size chart</a></button>
+            <p>Find Your Shoe Size & Fit!</p>
+            <button type="button" class="btn-responsive bg-info"><a href="sizechart.html">Size chart</a></button>
 
         </section>
 
-        <footer class="panel panel-default col-xs-12">
-            <div class="panel-body">
+        <footer>
+
                 <img src="./images/logo.jpg" alt="footer-logo" class="img-responsive">
                 <a href="#Shipping|Terms&amp; Conditions">Shipping Terms &amp; Conditions</a>&copy;Copyright 2017. 80's Style Sneaker Shop, LLC.
-            </div>
+
         </footer>
 
 
